# pvz2-gardendless-appimage

./: .gitignore  README.md  electron-main.js  package-lock.json  package.json
.github/workflows/: build.yml
assets/icons/: icon.icns
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
